--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </div>
     </div>
     
-    <script src="./js/bundle.js"></script>
+    <script src="./js/bundle.js" type="module" ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 </body>
 </html>
